syntax = "proto3";

package nlp;


option go_package = "internal/nlp/proto;proto";



service NLPService {
  rpc ClassifyText (TextRequest) returns (TextResponse);
}

message TextRequest {
  string text = 1;
}

message TextResponse {
  string category = 1;
  string tone = 2;
}
